Alignment fix for formatting tips box

--- a/packages/rocketchat-theme/assets/stylesheets/rtl.less
+++ b/packages/rocketchat-theme/assets/stylesheets/rtl.less
@@ -244,6 +244,7 @@
 			> .formatting-tips {
 				float: left;
 				position: relative;
+				right: auto;
 				q {
 					padding: 0 3px 0 0;
 					border-right: 3px solid;
